# BreakGL

./: CMakeLists.txt  README.md
include/: audio_manager.hpp  colors.hpp  components.hpp  constants.hpp  entities.hpp  game.hpp  game_state.hpp  objects.hpp  physics.hpp  prefabs.hpp  scenes.hpp  text.hpp  window.hpp
include/ECS/: ECSorganizer.hpp  components.hpp  entities.hpp  organizer.hpp  signatures.hpp  system_manager.hpp  systems.hpp
include/glad/: glad.c  glad.h
shaders/: helper.hpp  shader.hpp
shaders/background/: background.frag  background.vert
shaders/ball/: ball.frag  ball.vert
shaders/platform/: platform.frag
shaders/simple/: simple.frag
shaders/square/: square.frag  square.vert
shaders/text/: text.frag  text.vert
src/: audio_manager.cpp  game.cpp  main.cpp  objects.cpp  physics.cpp  prefabs.cpp  scenes.cpp  shader.cpp  window.cpp
tests/: CMakeLists.txt  audio_test.c  ecs_test.cpp  game_test.cpp  render_test.cpp
